--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
        <form>
         <label for="name">First & Last Name</label>
-        <input type="text" id="name" placeholder="i.e Davon Lean" value="" name="namelastname">
+        <input type="text" id="namelastname" placeholder="i.e Davon Lean" value="" name="namelastname">
 
         <label for="email">Email Address</label>
         <input type="text" id="email" placeholder="i.e. davon@mail.com" value="" name="email">
