--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:url" content="https://facebook.com" />
+  <meta property="og:url" content="https://facebook.com/" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Join with us" />
   <meta property="og:description"        content="Registration"/>
-  <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdilipkashyap15.medium.com%2Fhow-to-add-google-sign-in-button-to-your-website-8d3ef1a5df02&psig=AOvVaw27hWYdRbjZU6vkT1mUWWiY&ust=1684687747452000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCIC5q4mthP8CFQAAAAAdAAAAABAD" />
+  <meta property="og:image" content="" />
 
   <title>Document</title>
   <link rel="stylesheet" href="css/reset.css">
