--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:url" content="https://facebook.com/" />
+  <!-- <meta property="og:url" content="https://facebook.com/" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Join with us" />
   <meta property="og:description"        content="Registration"/>
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="" /> -->
 
   <title>Document</title>
   <link rel="stylesheet" href="css/reset.css">
@@ -46,9 +46,9 @@
         
         <input class="checkbox" type="checkbox">
         <label class="remember_me" for="checkbox">Remember Me</label>
-
+  
         <button class="submit_button" type="submit">Create Account</button>
-        <p class="create_account">Don't have an account? <span>Create free account</span></p>
+        <p class="create_account">Don't have an account? <a href="https://accounts.google.com/signup/" target="_blank"><span>Create free account</span></a></p>
        </form>
     </div>
 
