--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:description"        content="Registration"/>
   <meta property="og:image" content="" /> 
 
-  <title>Document</title>
+  <title>Sign Up</title>
   <link rel="stylesheet" href="css/reset.css">
   <script src="https://kit.fontawesome.com/00b1b5a652.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
